--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,14 @@
     </head>
 
     <body>
-
+        <%= render "common/flashes" %>
         <div class="container-fluid">
+          <div class="row">
             <%= render "common/navbar" %>
-            <%= render "common/flashes" %>
             <%= yield %>
+           </div>
         </div>
 
         <%= render "common/footer" %>
-
     </body>
 </html>
