--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 <div class="col-md-12">
    <div class="row box">
      <div class="box-inner col-md-6 col-md-offset-3">
-       <h1 class="title">18K Offer</h1>
-       <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+       <h1 class="title">JobsEasyGo</h1>
+       <p class="slogan">JobsEasyGo 是一个为上百个工种提供工作机会的求职网站。
          <br>
-         我们希望借由这个网站，能让大家找到且应征上高薪且优质的工作。
+         无论您想从事什么样的工作，无论您想就职何方，都可以获得更好的就业机会
          <br>
-         凭借自己的努力和天份也会变 Winner
+         EasyGo为您提供您需要的梦想资源
        </p>
        <p class="lead">
          <%= link_to '马上应征', jobs_path, class: 'btn btn-danger' %>
@@ -14,15 +14,16 @@
      </div>
    </div>
  </div>
- 
+
  <div class="content-section-a">
    <div class="container">
      <div class="row">
        <div class="col-lg-5 col-sm-6">
          <hr class="section-heading-spacer">
          <div class="clearfix"></div>
-         <h2 class="section-heading">找工作一定要带手机</h2>
-         <p class="lead">因为没带手机就不能联络公司</p>
+         <h2 class="section-heading">轻松快捷找工作</h2>
+         <p class="lead">无论您身在何方，一台电脑或者一部手机</p>
+         <p class="lead">轻松找到符合您所需要的工作机会</p>
        </div>
        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
          <%= image_tag 'pic-1.jpg', class: 'img-responsive' %>
@@ -37,8 +38,10 @@
        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
          <hr class="section-heading-spacer">
          <div class="clearfix"></div>
-         <h2 class="section-heading">一定要把履历写好在投</h2>
-         <p class="lead">履历如果不会写就一定要多上网寻求帮助，例如  <a target="_blank" href="http://blog.niclin.tw">Nic 的 Blog</a>! 啦啦啦啦啦啦啦</p>
+         <h2 class="section-heading">还在为如何修改简历而烦恼？</h2>
+         <p class="lead">EasyGo为您提供简历样板  <a target="_blank" href="https://forum.qzy.camp/">更多资源请参考</a></p>
+         <p class="lead"></p>
+       </div>
        </div>
        <div class="col-lg-5 col-sm-pull-6  col-sm-6">
          <%= image_tag 'pic-2.jpg', class: 'img-responsive' %>
@@ -53,8 +56,8 @@
        <div class="col-lg-5 col-sm-6">
          <hr class="section-heading-spacer">
          <div class="clearfix"></div>
-         <h2 class="section-heading">这是可以乱改的字<br>动手试试看吧</h2>
-         <p class="lead">摩改大赛可以参考<a target="_blank" href="https://forum.qzy.camp/">论坛资源</a></p>
+         <h2 class="section-heading">还在为面试而发愁？</h2>
+         <p class="lead">EasyGo与您分享成功经验<a target="_blank" href="http://carey-xu-blog.logdown.com/">Carey的logdown</a></p>
        </div>
        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
          <%= image_tag 'pic-3.jpg', class: 'img-responsive' %>
@@ -62,4 +65,19 @@
      </div>
    </div>
  </div>
- Contact GitHub API Training Shop Blog About
+
+ <div class="content-section-a">
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-5 col-sm-6">
+         <hr class="section-heading-spacer">
+         <div class="clearfix"></div>
+         <h2 class="section-heading">请为EasyGo留下宝贵意见</h2>
+         <p class="lead">让我们共同成长收获未来</p>
+       </div>
+       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+         <%= image_tag 'pic-4.jpg', class: 'img-responsive' %>
+       </div>
+     </div>
+   </div>
+ </div>
